# macro-recorder

./: CMakeLists.txt  README.md  create_installer.ps1  mainwindow.cpp  mainwindow.h  mainwindow.ui  setup.iss  sounds.qrc
Output/: uninst-6.4.3-5efdf03fbd.e32
build-release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MacroApp.sln  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  macroapp.vcxproj  macroapp.vcxproj.filters
build-release/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeploySupport.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake  QtDeployTargets.cmake
build-release/macroapp_autogen/: deps  mocs_compilation.cpp  mocs_compilation_Debug.cpp
build-release/macroapp_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
build-release/macroapp_autogen/EWIEGA46WW_Debug/: qrc_sounds.cpp
build-release/macroapp_autogen/MYYQ2Y7GGF/: moc_audio_decoder.cpp  moc_audio_decoder.cpp.d
build-release/macroapp_autogen/PRMOGMWJPH/: moc_global_hotkeys.cpp  moc_global_hotkeys.cpp.d  moc_macro_engine.cpp  (+1 more)
docs/: README.md  audio.md  core.md  ui.md
src/audio/: audio_decoder.cpp  audio_decoder.h
src/core/: global_hotkeys.cpp  global_hotkeys.h  macro_engine.cpp  macro_engine.h
src/ui/: event_delegate.cpp  event_delegate.h  insert_event_dialog.cpp  insert_event_dialog.h  insert_event_dialog.ui  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui
(+33 files in other folders)
